--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node src/server.js"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-handlebars": "^7.1.3"
   },
   "author": "",
   "license": "ISC"
