--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "express": "^4.21.2",
-    "express-handlebars": "^7.1.3"
+    "express-handlebars": "^7.1.3",
+    "express-session": "^1.18.1",
+    "sqlite3": "^5.1.7"
   },
   "author": "",
   "license": "ISC"
